--- a/carND-Keras-Lab/CarND-Keras-Lab-master/traffic-sign-classification-with-keras.ipynb
+++ b/carND-Keras-Lab/CarND-Keras-Lab-master/traffic-sign-classification-with-keras.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -773,7 +773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -783,26 +783,56 @@
      "output_type": "stream",
      "text": [
       "Train on 31367 samples, validate on 7842 samples\n",
-      "Epoch 1/10\n",
-      "31367/31367 [==============================] - 5s - loss: 1.6507 - acc: 0.5274 - val_loss: 0.6314 - val_acc: 0.7876\n",
-      "Epoch 2/10\n",
-      "31367/31367 [==============================] - 4s - loss: 0.5950 - acc: 0.8152 - val_loss: 0.6755 - val_acc: 0.8040\n",
-      "Epoch 3/10\n",
-      "31367/31367 [==============================] - 4s - loss: 0.4197 - acc: 0.8717 - val_loss: 0.2469 - val_acc: 0.9234\n",
-      "Epoch 4/10\n",
-      "31367/31367 [==============================] - 4s - loss: 0.3286 - acc: 0.8999 - val_loss: 0.1025 - val_acc: 0.9773\n",
-      "Epoch 5/10\n",
-      "31367/31367 [==============================] - 4s - loss: 0.2702 - acc: 0.9178 - val_loss: 0.0915 - val_acc: 0.9809\n",
-      "Epoch 6/10\n",
-      "31367/31367 [==============================] - 4s - loss: 0.2407 - acc: 0.9252 - val_loss: 0.7647 - val_acc: 0.8159\n",
-      "Epoch 7/10\n",
-      "31367/31367 [==============================] - 4s - loss: 0.2501 - acc: 0.9243 - val_loss: 0.1006 - val_acc: 0.9783\n",
-      "Epoch 8/10\n",
-      "31367/31367 [==============================] - 4s - loss: 0.1980 - acc: 0.9382 - val_loss: 0.5838 - val_acc: 0.8627\n",
-      "Epoch 9/10\n",
-      "31367/31367 [==============================] - 4s - loss: 0.2047 - acc: 0.9389 - val_loss: 0.3241 - val_acc: 0.9058\n",
-      "Epoch 10/10\n",
-      "31367/31367 [==============================] - 4s - loss: 0.1890 - acc: 0.9427 - val_loss: 0.0574 - val_acc: 0.9872\n"
+      "Epoch 1/25\n",
+      "31367/31367 [==============================] - 4s - loss: 1.6768 - acc: 0.5185 - val_loss: 1.2688 - val_acc: 0.6548\n",
+      "Epoch 2/25\n",
+      "31367/31367 [==============================] - 3s - loss: 0.5687 - acc: 0.8227 - val_loss: 1.2655 - val_acc: 0.7001\n",
+      "Epoch 3/25\n",
+      "31367/31367 [==============================] - 3s - loss: 0.3930 - acc: 0.8790 - val_loss: 0.9213 - val_acc: 0.7446\n",
+      "Epoch 4/25\n",
+      "31367/31367 [==============================] - 3s - loss: 0.3141 - acc: 0.9017 - val_loss: 0.3850 - val_acc: 0.8981\n",
+      "Epoch 5/25\n",
+      "31367/31367 [==============================] - 3s - loss: 0.2577 - acc: 0.9206 - val_loss: 0.4319 - val_acc: 0.8934\n",
+      "Epoch 6/25\n",
+      "31367/31367 [==============================] - 3s - loss: 0.2324 - acc: 0.9272 - val_loss: 0.1077 - val_acc: 0.9783\n",
+      "Epoch 7/25\n",
+      "31367/31367 [==============================] - 4s - loss: 0.1964 - acc: 0.9369 - val_loss: 0.0689 - val_acc: 0.9830\n",
+      "Epoch 8/25\n",
+      "31367/31367 [==============================] - 3s - loss: 0.1850 - acc: 0.9436 - val_loss: 0.0713 - val_acc: 0.9788\n",
+      "Epoch 9/25\n",
+      "31367/31367 [==============================] - 4s - loss: 0.1666 - acc: 0.9481 - val_loss: 0.2592 - val_acc: 0.9404\n",
+      "Epoch 10/25\n",
+      "31367/31367 [==============================] - 3s - loss: 0.1584 - acc: 0.9497 - val_loss: 0.0472 - val_acc: 0.9876\n",
+      "Epoch 11/25\n",
+      "31367/31367 [==============================] - 3s - loss: 0.1438 - acc: 0.9554 - val_loss: 0.0592 - val_acc: 0.9827\n",
+      "Epoch 12/25\n",
+      "31367/31367 [==============================] - 3s - loss: 0.1423 - acc: 0.9554 - val_loss: 0.1909 - val_acc: 0.9431\n",
+      "Epoch 13/25\n",
+      "31367/31367 [==============================] - 3s - loss: 0.1649 - acc: 0.9489 - val_loss: 0.0512 - val_acc: 0.9871\n",
+      "Epoch 14/25\n",
+      "31367/31367 [==============================] - 4s - loss: 0.1276 - acc: 0.9601 - val_loss: 0.0710 - val_acc: 0.9813\n",
+      "Epoch 15/25\n",
+      "31367/31367 [==============================] - 3s - loss: 0.1182 - acc: 0.9623 - val_loss: 0.0349 - val_acc: 0.9916\n",
+      "Epoch 16/25\n",
+      "31367/31367 [==============================] - 3s - loss: 0.1205 - acc: 0.9612 - val_loss: 0.0352 - val_acc: 0.9912\n",
+      "Epoch 17/25\n",
+      "31367/31367 [==============================] - 3s - loss: 0.1139 - acc: 0.9631 - val_loss: 0.0271 - val_acc: 0.9939\n",
+      "Epoch 18/25\n",
+      "31367/31367 [==============================] - 3s - loss: 0.1123 - acc: 0.9647 - val_loss: 0.0399 - val_acc: 0.9920\n",
+      "Epoch 19/25\n",
+      "31367/31367 [==============================] - 3s - loss: 0.1160 - acc: 0.9633 - val_loss: 0.4640 - val_acc: 0.8984\n",
+      "Epoch 20/25\n",
+      "31367/31367 [==============================] - 3s - loss: 0.1354 - acc: 0.9594 - val_loss: 0.3727 - val_acc: 0.9204\n",
+      "Epoch 21/25\n",
+      "31367/31367 [==============================] - 3s - loss: 0.1397 - acc: 0.9564 - val_loss: 0.0282 - val_acc: 0.9925\n",
+      "Epoch 22/25\n",
+      "31367/31367 [==============================] - 3s - loss: 0.1050 - acc: 0.9661 - val_loss: 0.0397 - val_acc: 0.9889\n",
+      "Epoch 23/25\n",
+      "31367/31367 [==============================] - 3s - loss: 0.1047 - acc: 0.9679 - val_loss: 0.0296 - val_acc: 0.9918\n",
+      "Epoch 24/25\n",
+      "31367/31367 [==============================] - 3s - loss: 0.1047 - acc: 0.9677 - val_loss: 0.0486 - val_acc: 0.9883\n",
+      "Epoch 25/25\n",
+      "31367/31367 [==============================] - 3s - loss: 0.1052 - acc: 0.9689 - val_loss: 0.0268 - val_acc: 0.9929\n"
      ]
     }
    ],
@@ -815,7 +845,7 @@
     "\n",
     "model = Sequential()\n",
     "\n",
-    "model.add(Convolution2D(32, 6, 6, input_shape=(32, 32, 3)))\n",
+    "model.add(Convolution2D(32, 5, 5, input_shape=(32, 32, 3)))\n",
     "model.add(MaxPooling2D(pool_size=(2,2), border_mode='valid'))\n",
     "model.add(Dropout(.5))\n",
     "model.add(Activation('relu'))\n",
@@ -836,14 +866,14 @@
     "# TODO: Compile and train the model\n",
     "model.compile('Nadam', 'categorical_crossentropy', ['accuracy'])\n",
     "\n",
-    "history = model.fit(X_normalized, y_one_hot, batch_size=128, nb_epoch=10, validation_split=.2)"
+    "history = model.fit(X_normalized, y_one_hot, batch_size=128, nb_epoch=25, validation_split=.2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 16,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -858,7 +888,7 @@
    "source": [
     "**Best Validation Accuracy:** (fill in here)\n",
     "\n",
-    "98.72 %"
+    "99.29 %"
    ]
   },
   {
@@ -875,7 +905,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -886,8 +916,9 @@
      "output_type": "stream",
      "text": [
       "hello\n",
-      "12608/12630 [============================>.] - ETA: 0sloss: 0.22110048232575022\n",
-      "acc: 0.9432304038948609\n"
+      "12630/12630 [==============================] - 1s     \n",
+      "loss: 0.2003572868891149\n",
+      "acc: 0.9496437055575687\n"
      ]
     }
    ],
@@ -922,7 +953,7 @@
    "source": [
     "**Test Accuracy:**\n",
     "\n",
-    "94.32%"
+    "94.96%"
    ]
   },
   {
