--- a/carND-Keras-Lab/CarND-Keras-Lab-master/traffic-sign-classification-with-keras.ipynb
+++ b/carND-Keras-Lab/CarND-Keras-Lab-master/traffic-sign-classification-with-keras.ipynb
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -124,12 +124,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Complete\n"
+     ]
+    }
+   ],
    "source": [
+    "\"\"\"\n",
+    "Commented out to test CIFAR10 dataset\n",
+    "\n",
     "with open('train.p', 'rb') as f:\n",
     "    data = pickle.load(f)\n",
     "\n",
@@ -137,7 +148,14 @@
     "X_train = data['features']\n",
     "\n",
     "# TODO: Load the label data to the variable y_train\n",
-    "y_train = data['labels']\n"
+    "y_train = data['labels']\n",
+    "\"\"\"\n",
+    "\n",
+    "\n",
+    "from keras.datasets import cifar10\n",
+    "(X_train, y_train), (X_test, y_test) = cifar10.load_data()\n",
+    "\n",
+    "print(\"Complete\")"
    ]
   },
   {
@@ -223,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -273,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -773,7 +791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -782,57 +800,57 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train on 31367 samples, validate on 7842 samples\n",
+      "Train on 40000 samples, validate on 10000 samples\n",
       "Epoch 1/25\n",
-      "31367/31367 [==============================] - 4s - loss: 1.6768 - acc: 0.5185 - val_loss: 1.2688 - val_acc: 0.6548\n",
+      "40000/40000 [==============================] - 7s - loss: 1.6340 - acc: 0.4052 - val_loss: 1.3742 - val_acc: 0.5266\n",
       "Epoch 2/25\n",
-      "31367/31367 [==============================] - 3s - loss: 0.5687 - acc: 0.8227 - val_loss: 1.2655 - val_acc: 0.7001\n",
+      "40000/40000 [==============================] - 4s - loss: 1.3362 - acc: 0.5192 - val_loss: 1.1985 - val_acc: 0.5830\n",
       "Epoch 3/25\n",
-      "31367/31367 [==============================] - 3s - loss: 0.3930 - acc: 0.8790 - val_loss: 0.9213 - val_acc: 0.7446\n",
+      "40000/40000 [==============================] - 4s - loss: 1.2219 - acc: 0.5650 - val_loss: 1.1876 - val_acc: 0.5911\n",
       "Epoch 4/25\n",
-      "31367/31367 [==============================] - 3s - loss: 0.3141 - acc: 0.9017 - val_loss: 0.3850 - val_acc: 0.8981\n",
+      "40000/40000 [==============================] - 4s - loss: 1.1506 - acc: 0.5916 - val_loss: 1.1147 - val_acc: 0.6218\n",
       "Epoch 5/25\n",
-      "31367/31367 [==============================] - 3s - loss: 0.2577 - acc: 0.9206 - val_loss: 0.4319 - val_acc: 0.8934\n",
+      "40000/40000 [==============================] - 4s - loss: 1.0946 - acc: 0.6146 - val_loss: 1.0260 - val_acc: 0.6476\n",
       "Epoch 6/25\n",
-      "31367/31367 [==============================] - 3s - loss: 0.2324 - acc: 0.9272 - val_loss: 0.1077 - val_acc: 0.9783\n",
+      "40000/40000 [==============================] - 4s - loss: 1.0530 - acc: 0.6280 - val_loss: 0.9977 - val_acc: 0.6598\n",
       "Epoch 7/25\n",
-      "31367/31367 [==============================] - 4s - loss: 0.1964 - acc: 0.9369 - val_loss: 0.0689 - val_acc: 0.9830\n",
+      "40000/40000 [==============================] - 4s - loss: 1.0124 - acc: 0.6430 - val_loss: 0.9358 - val_acc: 0.6807\n",
       "Epoch 8/25\n",
-      "31367/31367 [==============================] - 3s - loss: 0.1850 - acc: 0.9436 - val_loss: 0.0713 - val_acc: 0.9788\n",
+      "40000/40000 [==============================] - 4s - loss: 0.9856 - acc: 0.6511 - val_loss: 0.9510 - val_acc: 0.6725\n",
       "Epoch 9/25\n",
-      "31367/31367 [==============================] - 4s - loss: 0.1666 - acc: 0.9481 - val_loss: 0.2592 - val_acc: 0.9404\n",
+      "40000/40000 [==============================] - 4s - loss: 0.9577 - acc: 0.6634 - val_loss: 0.8885 - val_acc: 0.6904\n",
       "Epoch 10/25\n",
-      "31367/31367 [==============================] - 3s - loss: 0.1584 - acc: 0.9497 - val_loss: 0.0472 - val_acc: 0.9876\n",
+      "40000/40000 [==============================] - 4s - loss: 0.9329 - acc: 0.6712 - val_loss: 0.8740 - val_acc: 0.7016\n",
       "Epoch 11/25\n",
-      "31367/31367 [==============================] - 3s - loss: 0.1438 - acc: 0.9554 - val_loss: 0.0592 - val_acc: 0.9827\n",
+      "40000/40000 [==============================] - 4s - loss: 0.9189 - acc: 0.6776 - val_loss: 0.8555 - val_acc: 0.7039\n",
       "Epoch 12/25\n",
-      "31367/31367 [==============================] - 3s - loss: 0.1423 - acc: 0.9554 - val_loss: 0.1909 - val_acc: 0.9431\n",
+      "40000/40000 [==============================] - 4s - loss: 0.8984 - acc: 0.6840 - val_loss: 0.8461 - val_acc: 0.7051\n",
       "Epoch 13/25\n",
-      "31367/31367 [==============================] - 3s - loss: 0.1649 - acc: 0.9489 - val_loss: 0.0512 - val_acc: 0.9871\n",
+      "40000/40000 [==============================] - 4s - loss: 0.8748 - acc: 0.6927 - val_loss: 0.8406 - val_acc: 0.7066\n",
       "Epoch 14/25\n",
-      "31367/31367 [==============================] - 4s - loss: 0.1276 - acc: 0.9601 - val_loss: 0.0710 - val_acc: 0.9813\n",
+      "40000/40000 [==============================] - 4s - loss: 0.8660 - acc: 0.6952 - val_loss: 0.8298 - val_acc: 0.7140\n",
       "Epoch 15/25\n",
-      "31367/31367 [==============================] - 3s - loss: 0.1182 - acc: 0.9623 - val_loss: 0.0349 - val_acc: 0.9916\n",
+      "40000/40000 [==============================] - 4s - loss: 0.8526 - acc: 0.6990 - val_loss: 0.8257 - val_acc: 0.7121\n",
       "Epoch 16/25\n",
-      "31367/31367 [==============================] - 3s - loss: 0.1205 - acc: 0.9612 - val_loss: 0.0352 - val_acc: 0.9912\n",
+      "40000/40000 [==============================] - 4s - loss: 0.8465 - acc: 0.7014 - val_loss: 0.7963 - val_acc: 0.7224\n",
       "Epoch 17/25\n",
-      "31367/31367 [==============================] - 3s - loss: 0.1139 - acc: 0.9631 - val_loss: 0.0271 - val_acc: 0.9939\n",
+      "40000/40000 [==============================] - 4s - loss: 0.8297 - acc: 0.7091 - val_loss: 0.7983 - val_acc: 0.7156\n",
       "Epoch 18/25\n",
-      "31367/31367 [==============================] - 3s - loss: 0.1123 - acc: 0.9647 - val_loss: 0.0399 - val_acc: 0.9920\n",
+      "40000/40000 [==============================] - 4s - loss: 0.8273 - acc: 0.7060 - val_loss: 0.8194 - val_acc: 0.7150\n",
       "Epoch 19/25\n",
-      "31367/31367 [==============================] - 3s - loss: 0.1160 - acc: 0.9633 - val_loss: 0.4640 - val_acc: 0.8984\n",
+      "40000/40000 [==============================] - 4s - loss: 0.8162 - acc: 0.7135 - val_loss: 0.8021 - val_acc: 0.7163\n",
       "Epoch 20/25\n",
-      "31367/31367 [==============================] - 3s - loss: 0.1354 - acc: 0.9594 - val_loss: 0.3727 - val_acc: 0.9204\n",
+      "40000/40000 [==============================] - 4s - loss: 0.8043 - acc: 0.7148 - val_loss: 0.7767 - val_acc: 0.7300\n",
       "Epoch 21/25\n",
-      "31367/31367 [==============================] - 3s - loss: 0.1397 - acc: 0.9564 - val_loss: 0.0282 - val_acc: 0.9925\n",
+      "40000/40000 [==============================] - 4s - loss: 0.8002 - acc: 0.7200 - val_loss: 0.7812 - val_acc: 0.7289\n",
       "Epoch 22/25\n",
-      "31367/31367 [==============================] - 3s - loss: 0.1050 - acc: 0.9661 - val_loss: 0.0397 - val_acc: 0.9889\n",
+      "40000/40000 [==============================] - 4s - loss: 0.7908 - acc: 0.7209 - val_loss: 0.7834 - val_acc: 0.7295\n",
       "Epoch 23/25\n",
-      "31367/31367 [==============================] - 3s - loss: 0.1047 - acc: 0.9679 - val_loss: 0.0296 - val_acc: 0.9918\n",
+      "40000/40000 [==============================] - 4s - loss: 0.7852 - acc: 0.7246 - val_loss: 0.7770 - val_acc: 0.7355\n",
       "Epoch 24/25\n",
-      "31367/31367 [==============================] - 3s - loss: 0.1047 - acc: 0.9677 - val_loss: 0.0486 - val_acc: 0.9883\n",
+      "40000/40000 [==============================] - 4s - loss: 0.7858 - acc: 0.7238 - val_loss: 0.7773 - val_acc: 0.7272\n",
       "Epoch 25/25\n",
-      "31367/31367 [==============================] - 3s - loss: 0.1052 - acc: 0.9689 - val_loss: 0.0268 - val_acc: 0.9929\n"
+      "40000/40000 [==============================] - 4s - loss: 0.7763 - acc: 0.7280 - val_loss: 0.7644 - val_acc: 0.7314\n"
      ]
     }
    ],
@@ -860,7 +878,8 @@
     "model.add(Dense(128))\n",
     "model.add(Activation('relu'))\n",
     "\n",
-    "model.add(Dense(43))\n",
+    "### Important! Changed to 10 for CIFAR10 test\n",
+    "model.add(Dense(10))\n",
     "model.add(Activation('softmax'))\n",
     "\n",
     "# TODO: Compile and train the model\n",
